# problem-reductions

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  book.toml  codecov.yml  design.md  implementation_log.md  prompt.md  run-review-batch.sh  rustfmt.toml  smithery.yaml
.claude/: CLAUDE.md
.claude/hooks/: add-reduction-precommit.sh
.claude/rules/: adding-models.md  adding-reductions.md  documentation.md  testing.md  typst-drawing.md
.claude/skills/: add-model.md  add-rule.md  issue-to-pr.md  release.md  review-implementation.md
.github/ISSUE_TEMPLATE/: problem.md  rule.md
.github/workflows/: ci.yml  cleanup-branches.yml  community-call.yml  coverage.yml  docs.yml  release.yml
benches/: solver_benchmarks.rs
book/: 404.html  api.html  contributing.html  getting-started.html  index.html  io.html  print.html  searcher-c2a407aa.js  searchindex-997d595e.js  solvers.html  toc-b6e9a39e.js  toc.html  topology.html
book/problems/: graph.html  index.html  optimization.html  satisfiability.html  set.html  specialized.html
book/reductions/: available.html  graph.html  index.html  using.html
docs/: logo.typ
docs/agent-profiles/: SKILLS.md
docs/architecture/: v1-contract.md
docs/paper/: collaborate.md  compare_mapping.typ  lib.typ  petersen_square.json  petersen_square_unweighted.json  petersen_square_weighted.json  petersen_triangular.json  problem_schemas.json  proposed-reductions-841.typ  proposed-reductions.typ  reduction-diagram.typ  reduction_graph.json  reductions.typ  references.bib
docs/plans/: 2025-01-25-feature-parity-design.md  2025-01-25-feature-parity-implementation.md  2025-01-25-highs-ilp-solver-design.md  2026-01-25-ilp-problem-type-design.md  2026-01-26-set-theoretic-reductions-design.md  2026-01-26-set-theoretic-reductions-impl.md  2026-01-27-grid-graph-reductions.md  2026-01-28-triangular-crossing-gadgets.md  2026-01-28-weighted-tests-coverage.md  2026-01-30-map-config-back-square.md  2026-01-31-factoring-ilp-design.md  2026-01-31-ksg-triangular-refactor-design.md  2026-01-31-ksg-triangular-refactor-impl.md  2026-01-31-missing-julia-tests.md  2026-01-31-pr13-cleanup.md  2026-02-02-problem-variants-design.md  2026-02-02-variant-trait-design.md  2026-02-02-variant-trait-implementation.md  2026-02-03-consistent-type-parameterization-design.md  2026-02-03-consistent-type-parameterization-impl.md  2026-02-06-issue24-pdf-readme-design.md  2026-02-08-qubo-reductions-plan.md  2026-02-10-dry-mdbook-docs.md  2026-02-10-improve-example-instances-impl.md  2026-02-10-improve-example-instances.md  2026-02-10-json-schema-and-interactive-viz.md  2026-02-10-polish-reductions-implementation.md  2026-02-10-polish-reductions-paper.md  2026-02-10-unified-json-schema.md  2026-02-11-types-interfaces-redesign-design.md  (+196 more)
examples/: chained_reduction_factoring_to_spinglass.rs  chained_reduction_ksat_to_mis.rs  debug_map_config_back.jl  debug_truncated.rs  detect_isolated_problems.rs  detect_unreachable_from_3sat.rs  export_examples.rs  export_graph.rs  export_mapping_stages.rs  export_module_graph.rs  export_petersen_mapping.rs  export_schemas.rs  minesweeper_consistency.rs  minimummultiwaycut.rs  qubo_reductions.rs  reduction_circuit_to_spinglass.rs  reduction_circuitsat_to_ilp.rs  reduction_circuitsat_to_spinglass.rs  reduction_clique_to_ilp.rs  reduction_coloring_to_ilp.rs  reduction_coloring_to_qubo.rs  reduction_dominatingset_to_ilp.rs  reduction_factoring_to_circuit.rs  reduction_factoring_to_circuitsat.rs  reduction_factoring_to_ilp.rs  reduction_ilp_to_qubo.rs  reduction_is_to_ilp.rs  reduction_is_to_qubo.rs  reduction_is_to_setpacking.rs  reduction_is_to_vc.rs  reduction_kcoloring_to_ilp.rs  reduction_kcoloring_to_qubo.rs  reduction_knapsack_to_qubo.rs  reduction_ksatisfiability_to_qubo.rs  reduction_ksatisfiability_to_satisfiability.rs  reduction_ksatisfiability_to_subsetsum.rs  reduction_longestcommonsubsequence_to_maximumindependentset.rs  reduction_matching_to_ilp.rs  reduction_matching_to_setpacking.rs  reduction_maxcut_to_spinglass.rs  (+44 more)
mydocs/: DEVELOPER_API.md  RUST_FEATURES.md
problemreductions-cli/: Cargo.toml
problemreductions-cli/src/: cli.rs  dispatch.rs  main.rs  output.rs  problem_name.rs  test_support.rs  util.rs
problemreductions-cli/src/commands/: create.rs  evaluate.rs  export.rs  extract.rs  graph.rs  inspect.rs  mod.rs  reduce.rs  schema.rs  solve.rs
problemreductions-cli/src/commands/create/: schema_semantics.rs  schema_support.rs  tests.rs
problemreductions-cli/src/mcp/: mod.rs  prompts.rs  tests.rs  tools.rs
problemreductions-cli/tests/: cli_tests.rs  mcp_integration.rs  pred_sym_tests.rs
problemreductions-macros/: Cargo.toml
scripts/: convert_json_to_issues.py  enrich_bibtex.py  finalize_bibtex.py  generate_doc_snippets.sh  generate_qubo_tests.py  json_models_to_issues.py  json_rules_to_issues.py  make_helpers.sh  migrate_json_provenance.py  pipeline_batch.py  pipeline_board.py  pipeline_checks.py  pipeline_pr.py  pipeline_skill_context.py  pipeline_worktree.py  project_board_poll.py  project_board_recover.py  pyproject.toml  submit_batch_issues.py  submit_issues.py  test_make_helpers.py  test_pipeline_board.py  test_pipeline_checks.py  test_pipeline_pr.py  test_pipeline_skill_context.py  test_pipeline_worktree.py  test_project_board_poll.py  test_project_board_recover.py
src/: big_o.rs  canonical.rs  config.rs  error.rs  export.rs  expr.rs  graph_types.rs  io.rs  lib.rs  polynomial.rs  traits.rs  truth_table.rs  types.rs  variant.rs
tests/: grid_mapping_tests.rs  integration_tests.rs  main.rs  property_tests.rs  reduction_tests.rs  rules_unitdiskmapping.rs  set_theoretic_tests.rs  unit_graph_tests.rs
(+2439 files in other folders)
