[workspace]
members = [".", "problemreductions-macros"]

[package]
name = "problemreductions"
version = "0.1.0"
edition = "2021"
description = "A library for reducing NP-hard problems"
license = "MIT"
repository = "https://github.com/CodingThrust/problem-reductions"
keywords = ["np-hard", "optimization", "reduction", "sat", "graph"]
categories = ["algorithms", "science"]

[features]
default = ["ilp"]
ilp = ["good_lp"]

[dependencies]
petgraph = { version = "0.6", features = ["serde-1"] }
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
num-traits = "0.2"
good_lp = { version = "1.8", default-features = false, features = ["highs"], optional = true }
inventory = "0.3"
ordered-float = "5.0"
rand = "0.8"
problemreductions-macros = { path = "problemreductions-macros" }

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"

[[bench]]
name = "solver_benchmarks"
harness = false

[profile.release]
lto = true
