[package]
name = "problemreductions-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for exploring NP-hard problem reductions"
license = "MIT"

[[bin]]
name = "pred"
path = "src/main.rs"

[dependencies]
problemreductions = { path = "..", features = ["ilp"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
