[package]
name = "problemreductions-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for exploring NP-hard problem reductions"
license = "MIT"

[[bin]]
name = "pred"
path = "src/main.rs"

[features]
default = ["highs"]
highs = ["problemreductions/ilp-highs"]
coin-cbc = ["problemreductions/ilp-coin-cbc"]
clarabel = ["problemreductions/ilp-clarabel"]
scip = ["problemreductions/ilp-scip"]
lpsolve = ["problemreductions/ilp-lpsolve"]
microlp = ["problemreductions/ilp-microlp"]

[dependencies]
problemreductions = { path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap_complete = "4"
owo-colors = { version = "4", features = ["supports-colors"] }
